--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
     <meta charset="utf-8"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <link rel="stylesheet" href="script.css">
     <title>Spotify音樂分析</title>
 </head>
-<body>
+<body style="background-color: #111; margin: 0;overflow: scroll;">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div class="container" id="root"></div>
 </body>
